Extend the path resolution library
In the nearby future, I want to release a client-side FUSE daemon that
people can use to speed up builds that use remote execution. More
details can be found here:

https://github.com/bazelbuild/bazel/pull/12823

This daemon is going to make extensive use of the path resolution
library that we added some time. This commit contains all of the
components that the FUSE daemon is going to need in addition to what's
already there:

- AbsoluteScopeWalker: To enforce that paths are absolute.
- Builder: To construct normalized pathname strings.
- LoopDetectingScopeWalker: To prevent infinite traversal of symlinks.
- VirtualRootScopeWalkerFactory: To simulate resolution of absolute
  paths that start with a prefix that needs to be trimmed.
- Void{Component,Scope}Walker: To perform path resolution without making
  any assumptions about the underlying file system.

--- a/pkg/filesystem/path/BUILD.bazel
+++ b/pkg/filesystem/path/BUILD.bazel
@@ -3,15 +3,22 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 go_library(
     name = "go_default_library",
     srcs = [
+        "absolute_scope_walker.go",
+        "builder.go",
         "component.go",
         "component_walker.go",
+        "loop_detecting_scope_walker.go",
         "relative_scope_walker.go",
         "resolve.go",
         "scope_walker.go",
+        "virtual_root_scope_walker_factory.go",
+        "void_component_walker.go",
+        "void_scope_walker.go",
     ],
     importpath = "github.com/buildbarn/bb-storage/pkg/filesystem/path",
     visibility = ["//visibility:public"],
     deps = [
+        "//pkg/util:go_default_library",
         "@org_golang_google_grpc//codes:go_default_library",
         "@org_golang_google_grpc//status:go_default_library",
     ],
@@ -20,9 +27,13 @@ go_library(
 go_test(
     name = "go_default_test",
     srcs = [
+        "absolute_scope_walker_test.go",
+        "builder_test.go",
         "component_test.go",
+        "loop_detecting_scope_walker_test.go",
         "relative_scope_walker_test.go",
         "resolve_test.go",
+        "virtual_root_scope_walker_factory_test.go",
     ],
     embed = [":go_default_library"],
     deps = [
