--- a/pkg/blobstore/mirrored/BUILD.bazel
+++ b/pkg/blobstore/mirrored/BUILD.bazel
@@ -1,35 +1,35 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 
 go_library(
-    name = "go_default_library",
+    name = "mirrored",
     srcs = ["mirrored_blob_access.go"],
     importpath = "github.com/buildbarn/bb-storage/pkg/blobstore/mirrored",
     visibility = ["//visibility:public"],
     deps = [
-        "//pkg/atomic:go_default_library",
-        "//pkg/blobstore:go_default_library",
-        "//pkg/blobstore/buffer:go_default_library",
-        "//pkg/blobstore/replication:go_default_library",
-        "//pkg/digest:go_default_library",
-        "//pkg/util:go_default_library",
-        "@com_github_prometheus_client_golang//prometheus:go_default_library",
-        "@org_golang_google_grpc//codes:go_default_library",
-        "@org_golang_google_grpc//status:go_default_library",
+        "//pkg/atomic",
+        "//pkg/blobstore",
+        "//pkg/blobstore/buffer",
+        "//pkg/blobstore/replication",
+        "//pkg/digest",
+        "//pkg/util",
+        "@com_github_prometheus_client_golang//prometheus",
+        "@org_golang_google_grpc//codes",
+        "@org_golang_google_grpc//status",
     ],
 )
 
 go_test(
-    name = "go_default_test",
+    name = "mirrored_test",
     srcs = ["mirrored_blob_access_test.go"],
-    embed = [":go_default_library"],
+    embed = [":mirrored"],
     deps = [
         "//internal/mock:go_default_library",
-        "//pkg/blobstore/buffer:go_default_library",
-        "//pkg/digest:go_default_library",
-        "//pkg/testutil:go_default_library",
-        "@com_github_golang_mock//gomock:go_default_library",
-        "@com_github_stretchr_testify//require:go_default_library",
-        "@org_golang_google_grpc//codes:go_default_library",
-        "@org_golang_google_grpc//status:go_default_library",
+        "//pkg/blobstore/buffer",
+        "//pkg/digest",
+        "//pkg/testutil",
+        "@com_github_golang_mock//gomock",
+        "@com_github_stretchr_testify//require",
+        "@org_golang_google_grpc//codes",
+        "@org_golang_google_grpc//status",
     ],
 )
