--- a/cmd/bb_storage/BUILD.bazel
+++ b/cmd/bb_storage/BUILD.bazel
@@ -3,22 +3,22 @@ load("@io_bazel_rules_docker//go:image.bzl", "go_image")
 load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
 
 go_library(
-    name = "go_default_library",
+    name = "bb_storage_lib",
     srcs = ["main.go"],
     importpath = "github.com/buildbarn/bb-storage/cmd/bb_storage",
     visibility = ["//visibility:private"],
     deps = [
-        "//pkg/blobstore:go_default_library",
-        "//pkg/blobstore/configuration:go_default_library",
-        "//pkg/blobstore/grpcservers:go_default_library",
-        "//pkg/builder:go_default_library",
-        "//pkg/digest:go_default_library",
-        "//pkg/global:go_default_library",
-        "//pkg/grpc:go_default_library",
-        "//pkg/proto/configuration/bb_storage:go_default_library",
-        "//pkg/proto/icas:go_default_library",
-        "//pkg/util:go_default_library",
-        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
+        "//pkg/blobstore",
+        "//pkg/blobstore/configuration",
+        "//pkg/blobstore/grpcservers",
+        "//pkg/builder",
+        "//pkg/digest",
+        "//pkg/global",
+        "//pkg/grpc",
+        "//pkg/proto/configuration/bb_storage",
+        "//pkg/proto/icas",
+        "//pkg/util",
+        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
         "@go_googleapis//google/bytestream:bytestream_go_proto",
         "@org_golang_google_grpc//:go_default_library",
     ],
@@ -26,14 +26,14 @@ go_library(
 
 go_binary(
     name = "bb_storage",
-    embed = [":go_default_library"],
+    embed = [":bb_storage_lib"],
     pure = "on",
     visibility = ["//visibility:public"],
 )
 
 go_image(
     name = "bb_storage_container",
-    embed = [":go_default_library"],
+    embed = [":bb_storage_lib"],
     pure = "on",
     visibility = ["//visibility:public"],
 )
