--- a/internal/mock/BUILD.bazel
+++ b/internal/mock/BUILD.bazel
@@ -10,7 +10,7 @@ gomock(
         "ReadCloser",
         "Writer",
     ],
-    library = "//internal/mock/aliases:go_default_library",
+    library = "//internal/mock/aliases",
     package = "mock",
 )
 
@@ -23,7 +23,7 @@ gomock(
         "HTTPClient",
         "ReadBufferFactory",
     ],
-    library = "//pkg/blobstore:go_default_library",
+    library = "//pkg/blobstore",
     package = "mock",
 )
 
@@ -51,7 +51,7 @@ gomock(
         "PersistentStateSource",
         "PersistentStateStore",
     ],
-    library = "//pkg/blobstore/local:go_default_library",
+    library = "//pkg/blobstore/local",
     package = "mock",
 )
 
@@ -59,7 +59,7 @@ gomock(
     name = "blobstore_replication",
     out = "blobstore_replication.go",
     interfaces = ["BlobReplicator"],
-    library = "//pkg/blobstore/replication:go_default_library",
+    library = "//pkg/blobstore/replication",
     package = "mock",
 )
 
@@ -67,7 +67,7 @@ gomock(
     name = "blockdevice",
     out = "blockdevice.go",
     interfaces = ["BlockDevice"],
-    library = "//pkg/blockdevice:go_default_library",
+    library = "//pkg/blockdevice",
     package = "mock",
 )
 
@@ -80,7 +80,7 @@ gomock(
         "ErrorHandler",
         "ReadAtCloser",
     ],
-    library = "//pkg/blobstore/buffer:go_default_library",
+    library = "//pkg/blobstore/buffer",
     package = "mock",
 )
 
@@ -91,7 +91,7 @@ gomock(
         "BuildQueue",
         "DemultiplexedBuildQueueGetter",
     ],
-    library = "//pkg/builder:go_default_library",
+    library = "//pkg/builder",
     package = "mock",
 )
 
@@ -102,7 +102,7 @@ gomock(
         "Clock",
         "Timer",
     ],
-    library = "//pkg/clock:go_default_library",
+    library = "//pkg/clock",
     package = "mock",
 )
 
@@ -110,7 +110,7 @@ gomock(
     name = "cloud_aws",
     out = "cloud_aws.go",
     interfaces = ["S3"],
-    library = "//pkg/cloud/aws:go_default_library",
+    library = "//pkg/cloud/aws",
     package = "mock",
 )
 
@@ -118,7 +118,7 @@ gomock(
     name = "digest",
     out = "digest.go",
     interfaces = ["InstanceNameMatcher"],
-    library = "//pkg/digest:go_default_library",
+    library = "//pkg/digest",
     package = "mock",
 )
 
@@ -131,7 +131,7 @@ gomock(
         "FileReader",
         "FileReadWriter",
     ],
-    library = "//pkg/filesystem:go_default_library",
+    library = "//pkg/filesystem",
     package = "mock",
 )
 
@@ -142,7 +142,7 @@ gomock(
         "ComponentWalker",
         "ScopeWalker",
     ],
-    library = "//pkg/filesystem/path:go_default_library",
+    library = "//pkg/filesystem/path",
     package = "mock",
 )
 
@@ -154,7 +154,7 @@ gomock(
         "ClientDialer",
         "ClientFactory",
     ],
-    library = "//pkg/grpc:go_default_library",
+    library = "//pkg/grpc",
     package = "mock",
 )
 
@@ -167,7 +167,7 @@ gomock(
         "Streamer",
         "UnaryInvoker",
     ],
-    library = "@org_golang_google_grpc//:go_default_library",
+    library = "@org_golang_google_grpc//:grpc",
     package = "mock",
 )
 
@@ -175,7 +175,7 @@ gomock(
     name = "redis",
     out = "redis.go",
     interfaces = ["RedisClient"],
-    library = "//pkg/blobstore:go_default_library",
+    library = "//pkg/blobstore",
     package = "mock",
 )
 
@@ -186,7 +186,7 @@ gomock(
         "Execution_ExecuteServer",
         "Execution_WaitExecutionServer",
     ],
-    library = "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
+    library = "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
     package = "mock",
 )
 
@@ -194,7 +194,7 @@ gomock(
     name = "util",
     out = "util.go",
     interfaces = ["ErrorLogger"],
-    library = "//pkg/util:go_default_library",
+    library = "//pkg/util",
     package = "mock",
 )
 
@@ -222,24 +222,24 @@ go_library(
     importpath = "github.com/buildbarn/bb-storage/internal/mock",
     visibility = ["//:__subpackages__"],
     deps = [
-        "//pkg/blobstore:go_default_library",
-        "//pkg/blobstore/buffer:go_default_library",
-        "//pkg/blobstore/local:go_default_library",
-        "//pkg/builder:go_default_library",
-        "//pkg/clock:go_default_library",
-        "//pkg/digest:go_default_library",
-        "//pkg/filesystem:go_default_library",
-        "//pkg/filesystem/path:go_default_library",
-        "//pkg/proto/blobstore/local:go_default_library",
-        "//pkg/proto/configuration/grpc:go_default_library",
-        "//pkg/util:go_default_library",
-        "@com_github_aws_aws_sdk_go//aws/request:go_default_library",
-        "@com_github_aws_aws_sdk_go//service/s3:go_default_library",
-        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
-        "@com_github_go_redis_redis_v8//:go_default_library",
-        "@com_github_golang_mock//gomock:go_default_library",
+        "//pkg/blobstore",
+        "//pkg/blobstore/buffer",
+        "//pkg/blobstore/local",
+        "//pkg/builder",
+        "//pkg/clock",
+        "//pkg/digest",
+        "//pkg/filesystem",
+        "//pkg/filesystem/path",
+        "//pkg/proto/blobstore/local",
+        "//pkg/proto/configuration/grpc",
+        "//pkg/util",
+        "@com_github_aws_aws_sdk_go//aws/request",
+        "@com_github_aws_aws_sdk_go//service/s3",
+        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
+        "@com_github_go_redis_redis_v8//:redis",
+        "@com_github_golang_mock//gomock",
         "@go_googleapis//google/longrunning:longrunning_go_proto",
-        "@org_golang_google_grpc//:go_default_library",
-        "@org_golang_google_grpc//metadata:go_default_library",
+        "@org_golang_google_grpc//:grpc",
+        "@org_golang_google_grpc//metadata",
     ],
 )
