--- a/pkg/blobstore/BUILD.bazel
+++ b/pkg/blobstore/BUILD.bazel
@@ -1,7 +1,7 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 
 go_library(
-    name = "go_default_library",
+    name = "blobstore",
     srcs = [
         "ac_read_buffer_factory.go",
         "blob_access.go",
@@ -23,26 +23,26 @@ go_library(
     importpath = "github.com/buildbarn/bb-storage/pkg/blobstore",
     visibility = ["//visibility:public"],
     deps = [
-        "//pkg/blobstore/buffer:go_default_library",
-        "//pkg/clock:go_default_library",
-        "//pkg/cloud/aws:go_default_library",
-        "//pkg/digest:go_default_library",
-        "//pkg/proto/icas:go_default_library",
-        "//pkg/util:go_default_library",
-        "@com_github_aws_aws_sdk_go//aws:go_default_library",
-        "@com_github_aws_aws_sdk_go//service/s3:go_default_library",
-        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
-        "@com_github_go_redis_redis_v8//:go_default_library",
+        "//pkg/blobstore/buffer",
+        "//pkg/clock",
+        "//pkg/cloud/aws",
+        "//pkg/digest",
+        "//pkg/proto/icas",
+        "//pkg/util",
+        "@com_github_aws_aws_sdk_go//aws",
+        "@com_github_aws_aws_sdk_go//service/s3",
+        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
+        "@com_github_go_redis_redis_v8//:redis",
         "@com_github_golang_protobuf//proto:go_default_library",
-        "@com_github_prometheus_client_golang//prometheus:go_default_library",
-        "@org_golang_google_grpc//codes:go_default_library",
-        "@org_golang_google_grpc//status:go_default_library",
-        "@org_golang_x_net//context/ctxhttp:go_default_library",
+        "@com_github_prometheus_client_golang//prometheus",
+        "@org_golang_google_grpc//codes",
+        "@org_golang_google_grpc//status",
+        "@org_golang_x_net//context/ctxhttp",
     ],
 )
 
 go_test(
-    name = "go_default_test",
+    name = "blobstore_test",
     srcs = [
         "demultiplexing_blob_access_test.go",
         "empty_blob_injecting_blob_access_test.go",
@@ -52,19 +52,19 @@ go_test(
         "reference_expanding_blob_access_test.go",
         "validation_caching_read_buffer_factory_test.go",
     ],
-    embed = [":go_default_library"],
+    embed = [":blobstore"],
     deps = [
         "//internal/mock:go_default_library",
-        "//pkg/blobstore/buffer:go_default_library",
-        "//pkg/digest:go_default_library",
-        "//pkg/eviction:go_default_library",
-        "//pkg/proto/icas:go_default_library",
-        "@com_github_aws_aws_sdk_go//aws:go_default_library",
-        "@com_github_aws_aws_sdk_go//aws/awserr:go_default_library",
-        "@com_github_aws_aws_sdk_go//service/s3:go_default_library",
-        "@com_github_golang_mock//gomock:go_default_library",
-        "@com_github_stretchr_testify//require:go_default_library",
-        "@org_golang_google_grpc//codes:go_default_library",
-        "@org_golang_google_grpc//status:go_default_library",
+        "//pkg/blobstore/buffer",
+        "//pkg/digest",
+        "//pkg/eviction",
+        "//pkg/proto/icas",
+        "@com_github_aws_aws_sdk_go//aws",
+        "@com_github_aws_aws_sdk_go//aws/awserr",
+        "@com_github_aws_aws_sdk_go//service/s3",
+        "@com_github_golang_mock//gomock",
+        "@com_github_stretchr_testify//require",
+        "@org_golang_google_grpc//codes",
+        "@org_golang_google_grpc//status",
     ],
 )
