--- a/pkg/blobstore/local/BUILD.bazel
+++ b/pkg/blobstore/local/BUILD.bazel
@@ -1,7 +1,7 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 
 go_library(
-    name = "go_default_library",
+    name = "local",
     srcs = [
         "block_allocator.go",
         "block_device_backed_block_allocator.go",
@@ -31,26 +31,26 @@ go_library(
     importpath = "github.com/buildbarn/bb-storage/pkg/blobstore/local",
     visibility = ["//visibility:public"],
     deps = [
-        "//pkg/atomic:go_default_library",
-        "//pkg/blobstore:go_default_library",
-        "//pkg/blobstore/buffer:go_default_library",
-        "//pkg/blockdevice:go_default_library",
-        "//pkg/clock:go_default_library",
-        "//pkg/digest:go_default_library",
-        "//pkg/filesystem:go_default_library",
-        "//pkg/filesystem/path:go_default_library",
-        "//pkg/proto/blobstore/local:go_default_library",
-        "//pkg/random:go_default_library",
-        "//pkg/util:go_default_library",
+        "//pkg/atomic",
+        "//pkg/blobstore",
+        "//pkg/blobstore/buffer",
+        "//pkg/blockdevice",
+        "//pkg/clock",
+        "//pkg/digest",
+        "//pkg/filesystem",
+        "//pkg/filesystem/path",
+        "//pkg/proto/blobstore/local",
+        "//pkg/random",
+        "//pkg/util",
         "@com_github_golang_protobuf//proto:go_default_library",
-        "@com_github_prometheus_client_golang//prometheus:go_default_library",
-        "@org_golang_google_grpc//codes:go_default_library",
-        "@org_golang_google_grpc//status:go_default_library",
+        "@com_github_prometheus_client_golang//prometheus",
+        "@org_golang_google_grpc//codes",
+        "@org_golang_google_grpc//status",
     ],
 )
 
 go_test(
-    name = "go_default_test",
+    name = "local_test",
     srcs = [
         "block_device_backed_block_allocator_test.go",
         "block_device_backed_location_record_array_test.go",
@@ -66,19 +66,19 @@ go_test(
         "persistent_block_list_test.go",
         "volatile_block_list_test.go",
     ],
-    embed = [":go_default_library"],
+    embed = [":local"],
     deps = [
         "//internal/mock:go_default_library",
-        "//pkg/blobstore:go_default_library",
-        "//pkg/blobstore/buffer:go_default_library",
-        "//pkg/digest:go_default_library",
-        "//pkg/filesystem:go_default_library",
-        "//pkg/filesystem/path:go_default_library",
-        "//pkg/proto/blobstore/local:go_default_library",
-        "//pkg/testutil:go_default_library",
-        "@com_github_golang_mock//gomock:go_default_library",
-        "@com_github_stretchr_testify//require:go_default_library",
-        "@org_golang_google_grpc//codes:go_default_library",
-        "@org_golang_google_grpc//status:go_default_library",
+        "//pkg/blobstore",
+        "//pkg/blobstore/buffer",
+        "//pkg/digest",
+        "//pkg/filesystem",
+        "//pkg/filesystem/path",
+        "//pkg/proto/blobstore/local",
+        "//pkg/testutil",
+        "@com_github_golang_mock//gomock",
+        "@com_github_stretchr_testify//require",
+        "@org_golang_google_grpc//codes",
+        "@org_golang_google_grpc//status",
     ],
 )
