--- a/pkg/grpc/BUILD.bazel
+++ b/pkg/grpc/BUILD.bazel
@@ -1,7 +1,7 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 
 go_library(
-    name = "go_default_library",
+    name = "grpc",
     srcs = [
         "allow_authenticator.go",
         "any_authenticator.go",
@@ -23,33 +23,33 @@ go_library(
     importpath = "github.com/buildbarn/bb-storage/pkg/grpc",
     visibility = ["//visibility:public"],
     deps = [
-        "//pkg/atomic:go_default_library",
-        "//pkg/clock:go_default_library",
-        "//pkg/proto/configuration/grpc:go_default_library",
-        "//pkg/util:go_default_library",
-        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
+        "//pkg/atomic",
+        "//pkg/clock",
+        "//pkg/proto/configuration/grpc",
+        "//pkg/util",
+        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
         "@com_github_golang_protobuf//proto:go_default_library",
         "@com_github_golang_protobuf//ptypes:go_default_library_gen",
-        "@com_github_grpc_ecosystem_go_grpc_prometheus//:go_default_library",
-        "@io_opencensus_go//plugin/ocgrpc:go_default_library",
-        "@io_opencensus_go//trace:go_default_library",
+        "@com_github_grpc_ecosystem_go_grpc_prometheus//:go-grpc-prometheus",
+        "@io_opencensus_go//plugin/ocgrpc",
+        "@io_opencensus_go//trace",
         "@org_golang_google_grpc//:go_default_library",
-        "@org_golang_google_grpc//codes:go_default_library",
-        "@org_golang_google_grpc//credentials:go_default_library",
-        "@org_golang_google_grpc//credentials/oauth:go_default_library",
-        "@org_golang_google_grpc//health:go_default_library",
-        "@org_golang_google_grpc//health/grpc_health_v1:go_default_library",
-        "@org_golang_google_grpc//keepalive:go_default_library",
-        "@org_golang_google_grpc//metadata:go_default_library",
-        "@org_golang_google_grpc//peer:go_default_library",
-        "@org_golang_google_grpc//reflection:go_default_library",
-        "@org_golang_google_grpc//stats:go_default_library",
-        "@org_golang_google_grpc//status:go_default_library",
+        "@org_golang_google_grpc//codes",
+        "@org_golang_google_grpc//credentials",
+        "@org_golang_google_grpc//credentials/oauth",
+        "@org_golang_google_grpc//health",
+        "@org_golang_google_grpc//health/grpc_health_v1",
+        "@org_golang_google_grpc//keepalive",
+        "@org_golang_google_grpc//metadata",
+        "@org_golang_google_grpc//peer",
+        "@org_golang_google_grpc//reflection",
+        "@org_golang_google_grpc//stats",
+        "@org_golang_google_grpc//status",
     ],
 )
 
 go_test(
-    name = "go_default_test",
+    name = "grpc_test",
     srcs = [
         "allow_authenticator_test.go",
         "any_authenticator_test.go",
@@ -61,19 +61,19 @@ go_test(
         "metadata_forwarding_interceptor_test.go",
         "tls_client_certificate_authenticator_test.go",
     ],
-    embed = [":go_default_library"],
+    embed = [":grpc"],
     deps = [
         "//internal/mock:go_default_library",
-        "//pkg/proto/configuration/grpc:go_default_library",
-        "//pkg/testutil:go_default_library",
-        "@com_github_golang_mock//gomock:go_default_library",
-        "@com_github_stretchr_testify//require:go_default_library",
+        "//pkg/proto/configuration/grpc",
+        "//pkg/testutil",
+        "@com_github_golang_mock//gomock",
+        "@com_github_stretchr_testify//require",
         "@io_bazel_rules_go//proto/wkt:empty_go_proto",
         "@org_golang_google_grpc//:go_default_library",
-        "@org_golang_google_grpc//codes:go_default_library",
-        "@org_golang_google_grpc//credentials:go_default_library",
-        "@org_golang_google_grpc//metadata:go_default_library",
-        "@org_golang_google_grpc//peer:go_default_library",
-        "@org_golang_google_grpc//status:go_default_library",
+        "@org_golang_google_grpc//codes",
+        "@org_golang_google_grpc//credentials",
+        "@org_golang_google_grpc//metadata",
+        "@org_golang_google_grpc//peer",
+        "@org_golang_google_grpc//status",
     ],
 )
