--- a/pkg/proto/cas/BUILD.bazel
+++ b/pkg/proto/cas/BUILD.bazel
@@ -14,11 +14,11 @@ go_proto_library(
     importpath = "github.com/buildbarn/bb-storage/pkg/proto/cas",
     proto = ":cas_proto",
     visibility = ["//visibility:public"],
-    deps = ["@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library"],
+    deps = ["@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution"],
 )
 
 go_library(
-    name = "go_default_library",
+    name = "cas",
     embed = [":cas_go_proto"],
     importpath = "github.com/buildbarn/bb-storage/pkg/proto/cas",
     visibility = ["//visibility:public"],
