--- a/pkg/proto/replicator/BUILD.bazel
+++ b/pkg/proto/replicator/BUILD.bazel
@@ -18,11 +18,11 @@ go_proto_library(
     importpath = "github.com/buildbarn/bb-storage/pkg/proto/replicator",
     proto = ":replicator_proto",
     visibility = ["//visibility:public"],
-    deps = ["@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library"],
+    deps = ["@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution"],
 )
 
 go_library(
-    name = "go_default_library",
+    name = "replicator",
     embed = [":replicator_go_proto"],
     importpath = "github.com/buildbarn/bb-storage/pkg/proto/replicator",
     visibility = ["//visibility:public"],
