allow configuration of trace sampling policy (#106)
* allow configuration of trace sampling policy

* BUILD file style

* code review updates

* use double directly for probability

--- a/pkg/global/BUILD.bazel
+++ b/pkg/global/BUILD.bazel
@@ -19,5 +19,7 @@ go_library(
         "@io_opencensus_go_contrib_exporter_jaeger//:jaeger",
         "@io_opencensus_go_contrib_exporter_prometheus//:prometheus",
         "@io_opencensus_go_contrib_exporter_stackdriver//:stackdriver",
+        "@org_golang_google_grpc//codes",
+        "@org_golang_google_grpc//status",
     ],
 )
