Catch up with go-redis changes
The OpenTelemetry hook has moved from one package to another.

--- a/pkg/blobstore/configuration/BUILD.bazel
+++ b/pkg/blobstore/configuration/BUILD.bazel
@@ -36,8 +36,8 @@ go_library(
         "//pkg/random",
         "//pkg/util",
         "@com_github_aws_aws_sdk_go//service/s3",
+        "@com_github_go_redis_redis_extra_redisotel//:redisotel",
         "@com_github_go_redis_redis_v8//:redis",
-        "@com_github_go_redis_redisext//:redisext",
         "@com_github_golang_protobuf//ptypes:go_default_library_gen",
         "@com_github_google_uuid//:uuid",
         "@org_golang_google_grpc//codes",
