Eliminate some trailing use of 'go_default_library'

--- a/internal/mock/BUILD.bazel
+++ b/internal/mock/BUILD.bazel
@@ -199,7 +199,7 @@ gomock(
 )
 
 go_library(
-    name = "go_default_library",
+    name = "mock",
     srcs = [
         ":aliases.go",
         ":blobstore.go",
