--- a/pkg/blobstore/BUILD.bazel
+++ b/pkg/blobstore/BUILD.bazel
@@ -54,7 +54,7 @@ go_test(
     ],
     embed = [":blobstore"],
     deps = [
-        "//internal/mock:go_default_library",
+        "//internal/mock",
         "//pkg/blobstore/buffer",
         "//pkg/digest",
         "//pkg/eviction",
