--- a/pkg/blobstore/buffer/BUILD.bazel
+++ b/pkg/blobstore/buffer/BUILD.bazel
@@ -60,7 +60,7 @@ go_test(
     ],
     embed = [":buffer"],
     deps = [
-        "//internal/mock:go_default_library",
+        "//internal/mock",
         "//pkg/digest",
         "//pkg/testutil",
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
