--- a/pkg/blobstore/completenesschecking/BUILD.bazel
+++ b/pkg/blobstore/completenesschecking/BUILD.bazel
@@ -21,7 +21,7 @@ go_test(
     srcs = ["completeness_checking_blob_access_test.go"],
     embed = [":completenesschecking"],
     deps = [
-        "//internal/mock:go_default_library",
+        "//internal/mock",
         "//pkg/blobstore/buffer",
         "//pkg/digest",
         "//pkg/testutil",
