--- a/pkg/blobstore/local/BUILD.bazel
+++ b/pkg/blobstore/local/BUILD.bazel
@@ -68,7 +68,7 @@ go_test(
     ],
     embed = [":local"],
     deps = [
-        "//internal/mock:go_default_library",
+        "//internal/mock",
         "//pkg/blobstore",
         "//pkg/blobstore/buffer",
         "//pkg/digest",
