--- a/pkg/blobstore/readcaching/BUILD.bazel
+++ b/pkg/blobstore/readcaching/BUILD.bazel
@@ -20,7 +20,7 @@ go_test(
     srcs = ["read_caching_blob_access_test.go"],
     embed = [":readcaching"],
     deps = [
-        "//internal/mock:go_default_library",
+        "//internal/mock",
         "//pkg/blobstore/buffer",
         "//pkg/digest",
         "//pkg/testutil",
