--- a/pkg/blobstore/readfallback/BUILD.bazel
+++ b/pkg/blobstore/readfallback/BUILD.bazel
@@ -21,7 +21,7 @@ go_test(
     srcs = ["read_fallback_blob_access_test.go"],
     embed = [":readfallback"],
     deps = [
-        "//internal/mock:go_default_library",
+        "//internal/mock",
         "//pkg/blobstore/buffer",
         "//pkg/digest",
         "//pkg/testutil",
