--- a/pkg/builder/BUILD.bazel
+++ b/pkg/builder/BUILD.bazel
@@ -34,7 +34,7 @@ go_test(
     ],
     embed = [":builder"],
     deps = [
-        "//internal/mock:go_default_library",
+        "//internal/mock",
         "//pkg/digest",
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
         "@com_github_golang_mock//gomock",
