--- a/pkg/digest/BUILD.bazel
+++ b/pkg/digest/BUILD.bazel
@@ -41,7 +41,7 @@ go_test(
     ],
     embed = [":digest"],
     deps = [
-        "//internal/mock:go_default_library",
+        "//internal/mock",
         "//pkg/eviction",
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
         "@com_github_golang_mock//gomock",
