--- a/pkg/grpc/BUILD.bazel
+++ b/pkg/grpc/BUILD.bazel
@@ -63,7 +63,7 @@ go_test(
     ],
     embed = [":grpc"],
     deps = [
-        "//internal/mock:go_default_library",
+        "//internal/mock",
         "//pkg/proto/configuration/grpc",
         "//pkg/testutil",
         "@com_github_golang_mock//gomock",
