constant rate trace sampler

--- a/pkg/util/BUILD.bazel
+++ b/pkg/util/BUILD.bazel
@@ -8,6 +8,7 @@ go_library(
         "jsonnet.go",
         "status.go",
         "tls.go",
+        "tracing.go",
         "uuid.go",
     ],
     importpath = "github.com/buildbarn/bb-storage/pkg/util",
@@ -18,6 +19,7 @@ go_library(
         "@com_github_golang_protobuf//proto:go_default_library",
         "@com_github_google_go_jsonnet//:go-jsonnet",
         "@com_github_google_uuid//:uuid",
+        "@io_opencensus_go//trace",
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//status",
     ],
@@ -28,11 +30,14 @@ go_test(
     srcs = [
         "buckets_test.go",
         "tls_test.go",
+        "tracing_test.go",
     ],
     embed = [":util"],
     deps = [
         "//pkg/proto/configuration/tls",
+        "@com_github_stretchr_testify//assert",
         "@com_github_stretchr_testify//require",
+        "@io_opencensus_go//trace",
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//status",
     ],
