Add a global option for setting the umask
Systems like runc (Docker, Kubernetes) don't provide a proper option for
setting the umask of applications on startup. Let's compensate for this
by adding a global option, so that every bb_* binary allows setting this
through the configuration file.

--- a/pkg/global/BUILD.bazel
+++ b/pkg/global/BUILD.bazel
@@ -2,7 +2,11 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 go_library(
     name = "global",
-    srcs = ["apply_configuration.go"],
+    srcs = [
+        "apply_configuration.go",
+        "umask_nonunix.go",
+        "umask_unix.go",
+    ],
     importpath = "github.com/buildbarn/bb-storage/pkg/global",
     visibility = ["//visibility:public"],
     deps = [
