--- a/pkg/grpc/BUILD.bazel
+++ b/pkg/grpc/BUILD.bazel
@@ -72,10 +72,8 @@ go_test(
         "//pkg/testutil",
         "@com_github_golang_mock//gomock",
         "@com_github_stretchr_testify//require",
-        "//pkg/proto/configuration/grpc",
-        "@com_github_golang_mock//gomock",
-        "@in_gopkg_square_go_jose_v2//:",
-        "@in_gopkg_square_go_jose_v2//jwt:",
+        "@in_gopkg_square_go_jose_v2//:go-jose_v2",
+        "@in_gopkg_square_go_jose_v2//jwt",
         "@io_bazel_rules_go//proto/wkt:empty_go_proto",
         "@org_golang_google_grpc//:go_default_library",
         "@org_golang_google_grpc//codes",
