--- a/pkg/global/BUILD.bazel
+++ b/pkg/global/BUILD.bazel
@@ -1,4 +1,4 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_library")
+load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 
 go_library(
     name = "global",
@@ -6,10 +6,12 @@ go_library(
         "apply_configuration.go",
         "umask_nonunix.go",
         "umask_unix.go",
+        "constant_rate_trace_sampler.go",
     ],
     importpath = "github.com/buildbarn/bb-storage/pkg/global",
     visibility = ["//visibility:public"],
     deps = [
+        "//pkg/clock",
         "//pkg/proto/configuration/global",
         "//pkg/util",
         "@com_github_golang_protobuf//ptypes:go_default_library_gen",
@@ -25,5 +27,17 @@ go_library(
         "@io_opencensus_go_contrib_exporter_stackdriver//:stackdriver",
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//status",
+    ],
+)
+
+go_test(
+    name = "global_test",
+    srcs = ["constant_rate_trace_sampler_test.go"],
+    embed = [":global"],
+    deps = [
+        "//internal/mock",
+        "@com_github_golang_mock//gomock",
+        "@com_github_stretchr_testify//assert",
+        "@io_opencensus_go//trace",
     ],
 )
