--- a/pkg/filesystem/path/BUILD.bazel
+++ b/pkg/filesystem/path/BUILD.bazel
@@ -11,6 +11,7 @@ go_library(
         "relative_scope_walker.go",
         "resolve.go",
         "scope_walker.go",
+        "trace.go",
         "virtual_root_scope_walker_factory.go",
         "void_component_walker.go",
         "void_scope_walker.go",
@@ -33,6 +34,7 @@ go_test(
         "loop_detecting_scope_walker_test.go",
         "relative_scope_walker_test.go",
         "resolve_test.go",
+        "trace_test.go",
         "virtual_root_scope_walker_factory_test.go",
     ],
     embed = [":path"],
