--- a/pkg/blobstore/buffer/BUILD.bazel
+++ b/pkg/blobstore/buffer/BUILD.bazel
@@ -36,9 +36,9 @@ go_library(
         "//pkg/atomic",
         "//pkg/digest",
         "//pkg/util",
-        "@com_github_golang_protobuf//proto:go_default_library",
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//status",
+        "@org_golang_google_protobuf//proto",
     ],
 )
 
