CASBlobAccess.Put(): Propagate failures returned by the server
A subtlety of the gRPC API for client-streaming RPCs is that failures on
the server side don't cause client.Send() to return the server-side
error. You will see an io.EOF instead. Only client.CloseAndRecv() will
return the server-side error.

Adjust the code to discard the error returned by client.Send(). Return
the value from client.CloseAndRecv() instead. While there, add proper
unit testing coverage for CASBlobAccess.Put(), so that we can make sure
this doesn't regress going forward.

--- a/pkg/blobstore/grpcclients/BUILD.bazel
+++ b/pkg/blobstore/grpcclients/BUILD.bazel
@@ -1,4 +1,4 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_library")
+load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 
 go_library(
     name = "grpcclients",
@@ -17,6 +17,25 @@ go_library(
         "//pkg/util",
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
         "@com_github_google_uuid//:uuid",
+        "@go_googleapis//google/bytestream:bytestream_go_proto",
+        "@org_golang_google_grpc//:go_default_library",
+        "@org_golang_google_grpc//codes",
+        "@org_golang_google_grpc//status",
+    ],
+)
+
+go_test(
+    name = "grpcclients_test",
+    srcs = ["cas_blob_access_test.go"],
+    embed = [":grpcclients"],
+    deps = [
+        "//internal/mock",
+        "//pkg/blobstore/buffer",
+        "//pkg/digest",
+        "//pkg/testutil",
+        "@com_github_golang_mock//gomock",
+        "@com_github_google_uuid//:uuid",
+        "@com_github_stretchr_testify//require",
         "@go_googleapis//google/bytestream:bytestream_go_proto",
         "@org_golang_google_grpc//:go_default_library",
         "@org_golang_google_grpc//codes",
