--- a/internal/mock/BUILD.bazel
+++ b/internal/mock/BUILD.bazel
@@ -193,7 +193,10 @@ gomock(
 gomock(
     name = "util",
     out = "util.go",
-    interfaces = ["ErrorLogger"],
+    interfaces = [
+        "ErrorLogger",
+        "UUIDGenerator",
+    ],
     library = "//pkg/util",
     package = "mock",
 )
@@ -238,6 +241,7 @@ go_library(
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
         "@com_github_go_redis_redis_v8//:redis",
         "@com_github_golang_mock//gomock",
+        "@com_github_google_uuid//:uuid",
         "@go_googleapis//google/longrunning:longrunning_go_proto",
         "@org_golang_google_grpc//:grpc",
         "@org_golang_google_grpc//metadata",
