--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -22,7 +22,7 @@
             },
             {
                "name": "Buildifier",
-               "run": "sed '/^$/d' go_dependencies.bzl > go_dependencies.bzl.new && mv go_dependencies.bzl.new go_dependencies.bzl &&  bazel run @com_github_bazelbuild_buildtools//:buildifier"
+               "run": "sed '/^$/d' go_dependencies.bzl > go_dependencies.bzl.new && mv go_dependencies.bzl.new go_dependencies.bzl && bazel run @com_github_bazelbuild_buildtools//:buildifier"
             },
             {
                "name": "Gofmt",
@@ -185,6 +185,34 @@
                "uses": "actions/upload-artifact@v2-preview",
                "with": {
                   "name": "bb_storage.darwin_amd64",
+                  "path": "bb_storage"
+               }
+            },
+            {
+               "name": "darwin_arm64: build and test",
+               "run": "bazel build --platforms=@io_bazel_rules_go//go/toolchain:darwin_arm64 //..."
+            },
+            {
+               "name": "darwin_arm64: copy bb_replicator",
+               "run": "bazel run --run_under cp --platforms=@io_bazel_rules_go//go/toolchain:darwin_arm64 //cmd/bb_replicator $(pwd)/bb_replicator"
+            },
+            {
+               "name": "darwin_arm64: upload bb_replicator",
+               "uses": "actions/upload-artifact@v2-preview",
+               "with": {
+                  "name": "bb_replicator.darwin_arm64",
+                  "path": "bb_replicator"
+               }
+            },
+            {
+               "name": "darwin_arm64: copy bb_storage",
+               "run": "bazel run --run_under cp --platforms=@io_bazel_rules_go//go/toolchain:darwin_arm64 //cmd/bb_storage $(pwd)/bb_storage"
+            },
+            {
+               "name": "darwin_arm64: upload bb_storage",
+               "uses": "actions/upload-artifact@v2-preview",
+               "with": {
+                  "name": "bb_storage.darwin_arm64",
                   "path": "bb_storage"
                }
             },
