Let ICAS use the same compressor enum type as REv2
Once Buildbarn gains support for dealing with compressed blobs, this
will allow us to pass along compressed blobs in literal form, using the
same set of compression algorithms as REv2 itself.

--- a/pkg/blobstore/BUILD.bazel
+++ b/pkg/blobstore/BUILD.bazel
@@ -62,6 +62,7 @@ go_test(
         "@com_github_aws_aws_sdk_go//aws",
         "@com_github_aws_aws_sdk_go//aws/awserr",
         "@com_github_aws_aws_sdk_go//service/s3",
+        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
         "@com_github_golang_mock//gomock",
         "@com_github_stretchr_testify//require",
         "@org_golang_google_grpc//codes",
