Add the Initial Size Class Cache
The Initial Size Class Cache, or ISCC for short, is a new Protobuf based
data store. We're going to use this to store outcomes of actions on a
per-command basis. This makes it possible to get insight in execution
times of actions of a given shape.

Because it supports multiple so-called size classes, bb_scheduler will
be able to use this data to make smart decisions about which worker size
is the most optimal for a given action.

--- a/pkg/blobstore/BUILD.bazel
+++ b/pkg/blobstore/BUILD.bazel
@@ -12,6 +12,7 @@ go_library(
         "existence_caching_blob_access.go",
         "icas_read_buffer_factory.go",
         "instance_name_access_checking_blob_access.go",
+        "iscc_read_buffer_factory.go",
         "metrics_blob_access.go",
         "read_buffer_factory.go",
         "redis_blob_access.go",
@@ -28,6 +29,7 @@ go_library(
         "//pkg/cloud/aws",
         "//pkg/digest",
         "//pkg/proto/icas",
+        "//pkg/proto/iscc",
         "//pkg/util",
         "@com_github_aws_aws_sdk_go//aws",
         "@com_github_aws_aws_sdk_go//service/s3",
