--- a/cmd/bb_storage/BUILD.bazel
+++ b/cmd/bb_storage/BUILD.bazel
@@ -17,6 +17,7 @@ go_library(
         "//pkg/grpc",
         "//pkg/proto/configuration/bb_storage",
         "//pkg/proto/icas",
+        "//pkg/proto/iscc",
         "//pkg/util",
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
         "@go_googleapis//google/bytestream:bytestream_go_proto",
