--- a/pkg/blobstore/grpcclients/BUILD.bazel
+++ b/pkg/blobstore/grpcclients/BUILD.bazel
@@ -6,6 +6,7 @@ go_library(
         "ac_blob_access.go",
         "cas_blob_access.go",
         "icas_blob_access.go",
+        "iscc_blob_access.go",
     ],
     importpath = "github.com/buildbarn/bb-storage/pkg/blobstore/grpcclients",
     visibility = ["//visibility:public"],
@@ -14,6 +15,7 @@ go_library(
         "//pkg/blobstore/buffer",
         "//pkg/digest",
         "//pkg/proto/icas",
+        "//pkg/proto/iscc",
         "//pkg/util",
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
         "@com_github_google_uuid//:uuid",
