--- a/pkg/blobstore/BUILD.bazel
+++ b/pkg/blobstore/BUILD.bazel
@@ -10,6 +10,7 @@ go_library(
         "empty_blob_injecting_blob_access.go",
         "error_blob_access.go",
         "existence_caching_blob_access.go",
+        "hierarchical_instance_names_blob_access.go",
         "icas_read_buffer_factory.go",
         "instance_name_access_checking_blob_access.go",
         "iscc_read_buffer_factory.go",
@@ -50,6 +51,7 @@ go_test(
         "demultiplexing_blob_access_test.go",
         "empty_blob_injecting_blob_access_test.go",
         "existence_caching_blob_access_test.go",
+        "hierarchical_instance_names_blob_access_test.go",
         "instance_name_access_checking_blob_access_test.go",
         "redis_blob_access_test.go",
         "reference_expanding_blob_access_test.go",
@@ -62,6 +64,7 @@ go_test(
         "//pkg/digest",
         "//pkg/eviction",
         "//pkg/proto/icas",
+        "//pkg/testutil",
         "@com_github_aws_aws_sdk_go//aws",
         "@com_github_aws_aws_sdk_go//aws/awserr",
         "@com_github_aws_aws_sdk_go//service/s3",
