Tidy up ShardingBlobAccess
- Extend all methods to prepend the shard number to error messages. This
  makes it a lot easier to figure out which exact storage node is having
  issues. We already do this for MirroredBlobAccess.

- Reimplement FindMissing() on top of the errgroup package. In addition
  to being more compact it has the advantage that requests are
  automatically canceled as soon as a single error is observed. The old
  logic would only return when all requests were completed.

- Add proper unit testing coverage.

--- a/internal/mock/BUILD.bazel
+++ b/internal/mock/BUILD.bazel
@@ -64,6 +64,14 @@ gomock(
 )
 
 gomock(
+    name = "blobstore_sharding",
+    out = "blobstore_sharding.go",
+    interfaces = ["ShardPermuter"],
+    library = "//pkg/blobstore/sharding",
+    package = "mock",
+)
+
+gomock(
     name = "blockdevice",
     out = "blockdevice.go",
     interfaces = ["BlockDevice"],
@@ -208,6 +216,7 @@ go_library(
         ":blobstore.go",
         ":blobstore_local.go",
         ":blobstore_replication.go",
+        ":blobstore_sharding.go",
         ":blockdevice.go",
         ":buffer.go",
         ":builder.go",
@@ -228,6 +237,7 @@ go_library(
         "//pkg/blobstore",
         "//pkg/blobstore/buffer",
         "//pkg/blobstore/local",
+        "//pkg/blobstore/sharding",
         "//pkg/builder",
         "//pkg/clock",
         "//pkg/digest",
