--- a/pkg/blobstore/sharding/BUILD.bazel
+++ b/pkg/blobstore/sharding/BUILD.bazel
@@ -13,13 +13,28 @@ go_library(
         "//pkg/blobstore",
         "//pkg/blobstore/buffer",
         "//pkg/digest",
+        "//pkg/util",
         "@com_github_lazybeaver_xorshift//:xorshift",
+        "@org_golang_x_sync//errgroup",
     ],
 )
 
 go_test(
     name = "sharding_test",
-    srcs = ["weighted_shard_permuter_test.go"],
+    srcs = [
+        "sharding_blob_access_test.go",
+        "weighted_shard_permuter_test.go",
+    ],
     embed = [":sharding"],
-    deps = ["@com_github_stretchr_testify//require"],
+    deps = [
+        "//internal/mock",
+        "//pkg/blobstore",
+        "//pkg/blobstore/buffer",
+        "//pkg/digest",
+        "//pkg/testutil",
+        "@com_github_golang_mock//gomock",
+        "@com_github_stretchr_testify//require",
+        "@org_golang_google_grpc//codes",
+        "@org_golang_google_grpc//status",
+    ],
 )
