Add a standard function for creating HTTP clients
We now have several places in the tree where we need to create HTTP
clients. Let's all unify these by adding a pkg/http package that creates
clients for us. By providing a common interface, testing is simplified.

--- a/internal/mock/BUILD.bazel
+++ b/internal/mock/BUILD.bazel
@@ -20,7 +20,6 @@ gomock(
     interfaces = [
         "BlobAccess",
         "DemultiplexedBlobAccessGetter",
-        "HTTPClient",
         "ReadBufferFactory",
     ],
     library = "//pkg/blobstore",
@@ -180,6 +179,19 @@ gomock(
 )
 
 gomock(
+    name = "http",
+    out = "http.go",
+    interfaces = [
+        "Client",
+    ],
+    library = "//pkg/http",
+    mock_names = {
+        "Client": "MockHTTPClient",
+    },
+    package = "mock",
+)
+
+gomock(
     name = "redis",
     out = "redis.go",
     interfaces = ["RedisClient"],
@@ -227,6 +239,7 @@ go_library(
         ":filesystem_path.go",
         ":grpc.go",
         ":grpc_go.go",
+        ":http.go",
         ":redis.go",
         ":remoteexecution.go",
         ":util.go",
