--- a/pkg/blobstore/BUILD.bazel
+++ b/pkg/blobstore/BUILD.bazel
@@ -29,6 +29,7 @@ go_library(
         "//pkg/clock",
         "//pkg/cloud/aws",
         "//pkg/digest",
+        "//pkg/http",
         "//pkg/proto/icas",
         "//pkg/proto/iscc",
         "//pkg/util",
@@ -41,7 +42,6 @@ go_library(
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//status",
         "@org_golang_google_protobuf//proto",
-        "@org_golang_x_net//context/ctxhttp",
     ],
 )
 
