Add a utility function for saving W3C Trace Contexts
This method can be used by InMemoryBuildQueue and BuildClient to
propagate traces from the scheduler to the worker. The regular gRPC
middleware can't be used for this purpose, as it only propagates along a
forward direction. Because workers send RPCs to the scheduler, not the
other way around, this won't work.

--- a/pkg/util/BUILD.bazel
+++ b/pkg/util/BUILD.bazel
@@ -9,6 +9,7 @@ go_library(
         "status.go",
         "tls.go",
         "uuid.go",
+        "w3c_trace_context.go",
     ],
     importpath = "github.com/buildbarn/bb-storage/pkg/util",
     visibility = ["//visibility:public"],
@@ -16,6 +17,7 @@ go_library(
         "//pkg/proto/configuration/tls",
         "@com_github_google_go_jsonnet//:go-jsonnet",
         "@com_github_google_uuid//:uuid",
+        "@io_opentelemetry_go_otel//propagation",
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//status",
         "@org_golang_google_protobuf//encoding/protojson",
@@ -28,6 +30,7 @@ go_test(
     srcs = [
         "buckets_test.go",
         "tls_test.go",
+        "w3c_trace_context_test.go",
     ],
     embed = [":util"],
     deps = [
