Install OpenTelemetry gRPC middleware
This change removes all of the existing OpenCensus gRPC middleware we
have, replacing it with OpenCensus. It also rewrites the
RequestMetadataFetchingStatsHandler to be a gRPC interceptor that uses
OpenTelemetry. We also make some slight improvements to it in terms of
naming and fields that it exports.

--- a/pkg/grpc/BUILD.bazel
+++ b/pkg/grpc/BUILD.bazel
@@ -16,7 +16,7 @@ go_library(
         "metadata_forwarding_and_reusing_interceptor.go",
         "metadata_forwarding_interceptor.go",
         "metadata_header_values.go",
-        "request_metadata_fetching_stats_handler.go",
+        "request_metadata_tracing_interceptor.go",
         "server.go",
         "tls_client_certificate_authenticator.go",
     ],
@@ -29,8 +29,9 @@ go_library(
         "//pkg/util",
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
         "@com_github_grpc_ecosystem_go_grpc_prometheus//:go-grpc-prometheus",
-        "@io_opencensus_go//plugin/ocgrpc",
-        "@io_opencensus_go//trace",
+        "@io_opentelemetry_go_contrib_instrumentation_google_golang_org_grpc_otelgrpc//:otelgrpc",
+        "@io_opentelemetry_go_otel//attribute",
+        "@io_opentelemetry_go_otel_trace//:trace",
         "@org_golang_google_grpc//:go_default_library",
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//credentials",
@@ -41,7 +42,6 @@ go_library(
         "@org_golang_google_grpc//metadata",
         "@org_golang_google_grpc//peer",
         "@org_golang_google_grpc//reflection",
-        "@org_golang_google_grpc//stats",
         "@org_golang_google_grpc//status",
         "@org_golang_google_protobuf//encoding/prototext",
         "@org_golang_google_protobuf//proto",
@@ -59,6 +59,7 @@ go_test(
         "metadata_adding_interceptor_test.go",
         "metadata_forwarding_and_reusing_interceptor_test.go",
         "metadata_forwarding_interceptor_test.go",
+        "request_metadata_tracing_interceptor_test.go",
         "tls_client_certificate_authenticator_test.go",
     ],
     embed = [":grpc"],
@@ -66,14 +67,18 @@ go_test(
         "//internal/mock",
         "//pkg/proto/configuration/grpc",
         "//pkg/testutil",
+        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
         "@com_github_golang_mock//gomock",
         "@com_github_stretchr_testify//require",
+        "@io_opentelemetry_go_otel//attribute",
+        "@io_opentelemetry_go_otel_trace//:trace",
         "@org_golang_google_grpc//:go_default_library",
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//credentials",
         "@org_golang_google_grpc//metadata",
         "@org_golang_google_grpc//peer",
         "@org_golang_google_grpc//status",
+        "@org_golang_google_protobuf//proto",
         "@org_golang_google_protobuf//types/known/emptypb",
     ],
 )
