--- a/internal/mock/BUILD.bazel
+++ b/internal/mock/BUILD.bazel
@@ -172,6 +172,7 @@ gomock(
         "ClientConnInterface",
         "ClientStream",
         "Streamer",
+        "UnaryHandler",
         "UnaryInvoker",
     ],
     library = "@org_golang_google_grpc//:grpc",
@@ -211,6 +212,14 @@ gomock(
 )
 
 gomock(
+    name = "trace",
+    out = "trace.go",
+    interfaces = ["Span"],
+    library = "@io_opentelemetry_go_otel_trace//:trace",
+    package = "mock",
+)
+
+gomock(
     name = "util",
     out = "util.go",
     interfaces = [
@@ -242,6 +251,7 @@ go_library(
         ":http.go",
         ":redis.go",
         ":remoteexecution.go",
+        ":trace.go",
         ":util.go",
     ],
     importpath = "github.com/buildbarn/bb-storage/internal/mock",
@@ -266,6 +276,9 @@ go_library(
         "@com_github_golang_mock//gomock",
         "@com_github_google_uuid//:uuid",
         "@go_googleapis//google/longrunning:longrunning_go_proto",
+        "@io_opentelemetry_go_otel//attribute",
+        "@io_opentelemetry_go_otel//codes",
+        "@io_opentelemetry_go_otel_trace//:trace",
         "@org_golang_google_grpc//:grpc",
         "@org_golang_google_grpc//metadata",
     ],
