Allow Authenticator to wrap Context
When implementing custom Authenticators, it may be useful to attach
metadata to the Context, so that it may be passed down into gRPC
services. This data could, for example, be used for Authorization
purpopses.

This change adjusts the prototype of Authenticate() to return a Context.
While there, move the interceptors into a separate source file and give
them testing coverage.

--- a/internal/mock/BUILD.bazel
+++ b/internal/mock/BUILD.bazel
@@ -171,6 +171,8 @@ gomock(
     interfaces = [
         "ClientConnInterface",
         "ClientStream",
+        "ServerStream",
+        "StreamHandler",
         "Streamer",
         "UnaryHandler",
         "UnaryInvoker",
